# peregrine-tool

./: .gitignore  Makefile  README.md  RocqMakefile.conf  _CoqProject  coq-lambda-box-extraction.opam  dune-project  gen.py  lake-manifest.json  lakefile.toml  out_continue.txt  out_start.txt  rocq-lambda-box-extraction.opam  rocq-peregrine.opam
.github/: coq-lambda-box-extraction.opam.locked  rocq-lambda-box-extraction.opam.locked  rocq-peregrine.opam.locked
.github/workflows/: build.yml  lint-opam.yml  nix-action-9.0.yml  nix-action-9.1.yml
.nix/: config.nix  coq-nix-toolbox.nix
agda_frontend/: .gitignore  Makefile  README.md  agda2lambox.agda-lib  agda2lambox.cabal  cabal.project
agda_frontend/demo/: index.html
agda_frontend/lambox/: Makefile  lambdabox.cabal
agda_frontend/lambox/extraction/: .gitignore  Ascii.hs  BasicAst.hs  BinInt.hs  BinNat.hs  BinNums.hs  BinPos.hs  Byte.hs  ByteCompare.hs  Bytestring.hs  CeresFormat.hs  CeresS.hs  CeresSerialize.hs  CeresString.hs  Config0.hs  ConfigUtils.hs  Datatypes.hs  Decimal.hs  DecimalString.hs  Deserialize.hs  EAst.hs  EPrimitive.hs  EProgram.hs  ERemapInductives.hs  ExAst.hs  Kernames.hs  List0.hs  ListDef.hs  Nat0.hs  PAst.hs  PeanoNat.hs  PosDef.hs  PrimFloat.hs  PrimInt63.hs  PrimString.hs  Primitive.hs  Serialize.hs  SerializeCommon.hs  SerializeConfig.hs  SerializeEAst.hs  (+5 more)
agda_frontend/lambox/src/LambdaBox/: Config.hs  ConfigConvert.hs  LBoxConvert.hs
agda_frontend/src/: LambdaBox.hs  Main.hs
agda_frontend/src/Agda/: Utils.hs
agda_frontend/src/Agda/Utils/: EliminateDefaults.hs  EtaExpandConstructors.hs  Simplify.hs  Treeless.hs
agda_frontend/src/Agda2Lambox/: Compile.hs
agda_frontend/src/Agda2Lambox/Compile/: Function.hs  Inductive.hs  Monad.hs  Term.hs  Type.hs  TypeScheme.hs  Utils.hs
agda_frontend/src/CodeGen/: Coq.hs
agda_frontend/src/LambdaBox/: Env.hs  Names.hs  Term.hs  Type.hs
agda_frontend/test/: .gitignore  Agda.css  Main.hs  Makefile  agda2lambox-tests.agda-lib  renderTranslations.sh
agda_frontend/test/typed/: SchemeTyped.agda  Test.agda  Types.agda
agda_frontend/test/untyped/: Demo.agda  Equality.agda  EtaCon.agda  Exports.agda  Hello.agda  Imports.agda  Input.agda  Irr.agda  K.agda  Levels.agda  Map.agda  Mutual.agda  Nat.agda  OddEven.agda  PatternLambda.agda  Proj.agda  STLC.agda  Unicode.agda  With.agda  rust.agda  scheme.agda
benchmarks/: .gitignore  Makefile  README.md  _CoqProject  dune-project
benchmarks/agda/: BinaryTrees.agda  Fannkuch.agda  Haskell.agda  MainBinaryTrees.agda  MainFannkuch.agda  Makefile  Prelude.agda  README.md
benchmarks/bench/: Makefile  compare_all_targets.sh  compile_c.sh  compile_compcert.sh  compile_lean_peregrine.sh  convert_ast.py  final_compare.sh  quick_compare.sh  reference_times.json  run_benchmarks.js  run_comparison.sh  run_native_comparison.sh
benchmarks/bench/targets/rust/: Cargo.toml
benchmarks/frontend_bench/: Makefile
benchmarks/theories/: AckermannN.v  AckermannNExtract.v  BenchExtract.v  BinaryTrees.v  Common.v  Fannkuch.v  NQueens.v  NQueensZ.v  NQueensZExtract.v  NewBenchExtract.v  Pidigits.v  QuicksortWf.v  QuicksortWfExtract.v  QuicksortZ.v  QuicksortZExtract.v  RustExtract.v  SymbolicDiff.v  Tak.v  Treesort.v  dune
doc/: backends.md  dev.md  format.md  frontends.md  notes.md  support.md  tasks.md
hs-lib/: Makefile  _CoqProject  fix_extraction.patch  lambdabox.cabal
hs-lib/extraction/: .gitignore
hs-lib/src/LambdaBox/: Config.hs  ConfigConvert.hs  LambdaBox.hs  SExpr.hs  Target.hs
hs-lib/theories/: ExtractionHaskell.v
lean/: Main.lean  README.md
lean/Peregrine/: Runtime.lean
peregrine/: dune-project
peregrine/cakeml/: .gitignore  Makefile  README.md  _RocqProject  rocq-cakeml-extraction.opam
peregrine/cakeml/theories/: Compile.v  FFI.v  Pipeline.v  Serialize.v  Tests.v
peregrine/cakeml/theories/CakeML/: ast.v  bigstep.v  functions.v  namespace.v  semanticPrimitives.v  smallstep.v  smallstep_rel.v
peregrine/cakeml/theories/CakeML/proofs/: equivalence_proofs.v  helper_lemmas.v  invariants.v
peregrine/test/lean/: lakefile.lean
plugin/: META.rocq-peregrine  Makefile  RocqMakefile.plugin.local  _PluginProject  fix_extraction.patch  process_extraction.sh
plugin/src/: .gitignore  META.rocq-peregrine  g_peregrine.mlg  peregrine_plugin.mlpack
plugin/theories/: ExtractPlugin.v  Loader.v
src/: dune
src/printC/: printAST.ml  printCsyntax.ml
test/: Makefile  README.md
test/lean/: lake-manifest.json  lakefile.lean
test/rocq/: .gitignore  Makefile  _CoqProject  _CoqProject.ci
test/src/: c.ts  cakeml.ts  lean.ts  ocaml.ts  runner.ts  tests.ts  types.ts  utils.ts
theories/: CertiCoqPipeline.v  CheckWf.v  Config.v  ConfigUtils.v  CoqToLambdaBox.v  EvalBox.v  Extraction.v  LambdaBoxToC.v  LambdaBoxToElm.v  LambdaBoxToOCaml.v  LambdaBoxToRust.v  LambdaBoxToWasm.v  NameSanitize.v  PAst.v  Pipeline.v  Translations.v  Unicode.v  UnicodeXID.v  Utils.v
theories/backends/: ASTBackend.v  CBackend.v  CakeMLBackend.v  CertiCoqBackend.v  CertiRocqBackend.v  ElmBackend.v  EvalBackend.v  LeanBackend.v  OCamlBackend.v  RustBackend.v  WasmBackend.v
theories/deprecated/: CertiCoqPipeline.v  ErasurePipeline.v  LambdaBoxToC.v  LambdaBoxToElm.v  LambdaBoxToOCaml.v  LambdaBoxToWasm.v  Translations.v  TypedTransforms.v
theories/erasure/: EImplementLazyForce.v  ERemapInductives.v  Erasure.v  ErasureTyped.v  Transforms.v
theories/lean/: LeanCompile.v  LeanIR.v  PrintLean.v
theories/serialization/: CeresExtra.v  Deserialize.v  DeserializeCommon.v  DeserializeConfig.v  DeserializeEAst.v  DeserializeExAst.v  DeserializePAst.v  DeserializePrimitives.v  Serialize.v  SerializeCommon.v  SerializeCommonComplete.v  SerializeCommonSound.v  SerializeComplete.v  SerializeConfig.v  SerializeConfigComplete.v  SerializeConfigSound.v  SerializeEAst.v  SerializeEAstComplete.v  SerializeEAstSound.v  SerializeExAst.v  SerializeExAstComplete.v  SerializeExAstSound.v  SerializeLambdaANF.v  SerializeLambdaBoxLocal.v  SerializeLambdaBoxMut.v  SerializePAst.v  SerializePAstComplete.v  SerializePAstSound.v  SerializePrimitives.v  (+3 more)
(+118 files in other folders)
