opam-version: "2.0"
name: "coq-lambda-box-extraction"
version: "dev"
synopsis: "Coq extraction"
description: """
A framework for extracting lambda box programs
"""
maintainer: "The COBRA team"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/lambda-box-extraction"
dev-repo: "git+https://github.com/AU-COBRA/lambda-box-extraction.git"
bug-reports: "https://github.com/AU-COBRA/lambda-box-extraction/issues"

depends: [
  "coq" {>= "8.19" & < "8.20~"}
  "coq-metacoq-utils" {= "1.3.3+8.19"}
  "coq-metacoq-common" {= "1.3.3+8.19"}
  "coq-metacoq-template" {= "1.3.3+8.19"}
  "coq-metacoq-template-pcuic" {= "1.3.3+8.19"}
  "coq-metacoq-pcuic" {= "1.3.3+8.19"}
  "coq-metacoq-safechecker" {= "1.3.3+8.19"}
  "coq-metacoq-erasure" {= "1.3.3+8.19"}
  "coq-rust-extraction" {= "dev"}
  "coq-elm-extraction" {= "dev"}
  "coq-certicoq" {= "dev"}
  "coq-wasm" {= "dev"}
  "coq-primitive" {= "8.19.dev"}
  "coq-ceres"
  "coq-verified-extraction"
  "cmdliner" {< "2.0.0"}
]

pin-depends: [
  ["coq-certicoq.dev" "git+https://github.com/4ever2/certicoqwasm.git#36c16acc63f91b4331625327af91ad124935fbb0"]
  ["coq-wasm.dev" "git+https://github.com/womeier/wasmcert-coq.git#88a42ee"]
  ["coq-rust-extraction.dev" "git+https://github.com/AU-COBRA/coq-rust-extraction.git#7ab557c684b07e1d8410bd7585973dec8dd35b6c"]
  ["coq-elm-extraction.dev" "git+https://github.com/AU-COBRA/coq-elm-extraction.git#188e44e746303ec3365243006ceeafe6f44167d2"]
  ["coq-primitive.8.19.dev" "git+https://github.com/palmskog/coq-primitive.git"]
]

build: [ "dune" "build" "-p" name "-j" jobs "@install" ]
install: [ "dune" "install" "-p" name ]

tags: [
  "keyword:extraction"
  "logpath:LambdaBox"
]
