opam-version: "2.0"
name: "coq-lambda-box-extraction"
version: "dev"
synopsis: "Coq extraction"
description: """
A framework for extracting lambda box programs
"""
maintainer: "The COBRA team"
authors: "The COBRA team"
license: "MIT"
homepage: "https://github.com/AU-COBRA/lambda-box-extraction"
dev-repo: "git+https://github.com/AU-COBRA/lambda-box-extraction.git"
bug-reports: "https://github.com/AU-COBRA/lambda-box-extraction/issues"

depends: [
  "coq" {>= "8.20" & < "9.0~"}
  "coq-metacoq-utils" {= "1.3.4+8.20"}
  "coq-metacoq-common" {= "1.3.4+8.20"}
  "coq-metacoq-template" {= "1.3.4+8.20"}
  "coq-metacoq-template-pcuic" {= "1.3.4+8.20"}
  "coq-metacoq-pcuic" {= "1.3.4+8.20"}
  "coq-metacoq-safechecker" {= "1.3.4+8.20"}
  "coq-metacoq-erasure" {= "1.3.4+8.20"}
  "coq-rust-extraction" {= "0.1.1"}
  "coq-elm-extraction" {= "0.1.1"}
  "coq-certicoq" {= "dev"}
  "coq-primitive" {= "8.20.dev"}
  "coq-ceres"
  "coq-verified-extraction" {= "8.20.dev"}
  "cmdliner" {>= "2.0.0"}
]

pin-depends: [
  ["coq-certicoq.dev" "git+https://github.com/CertiCoq/certicoq.git#131494c512b516c49379b5ea432ed9ae23484af6"]
  ["coq-primitive.8.20.dev" "git+https://github.com/4ever2/coq-primitive.git#ccd389d209aec3ce4563714981283a1ea3497ce3"]
  ["coq-verified-extraction.8.20.dev" "git+https://github.com/4ever2/rocq-verified-extraction.git#a235bc2549027aed696300a5fe5aa73ff95262cd"]
]

build: [ "dune" "build" "-p" name "-j" jobs "@install" ]
install: [ "dune" "install" "-p" name ]

tags: [
  "keyword:extraction"
  "logpath:LambdaBox"
]
