opam-version: "2.0"
name: "rocq-peregrine"
version: "dev"
synopsis: "The Peregrine tool is a unified middle-end for code generation from proof assistants"
description: """
The Peregrine tool is a unified middle-end for code generation from proof assistants
"""
maintainer: "The Peregrine team"
authors: "The Peregrine team"
license: "MIT"
homepage: "https://peregrine-project.github.io/"
dev-repo: "git+https://github.com/peregrine-project/peregrine-tool.git"
bug-reports: "https://github.com/peregrine-project/peregrine-tool/issues"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-metarocq-utils" {= "1.4+9.0"}
  "rocq-metarocq-common" {= "1.4+9.0"}
  "rocq-metarocq-template" {= "1.4+9.0"}
  "rocq-metarocq-template-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-safechecker" {= "1.4+9.0"}
  "rocq-metarocq-erasure" {= "1.4+9.0"}
  "rocq-typed-extraction-common" {= "9.0.dev"}
  "rocq-rust-extraction" {= "9.0.dev"}
  "rocq-elm-extraction" {= "9.0.dev"}
  "coq-certicoq" {= "dev"}
  "rocq-primitive" {= "9.0.0"}
  "coq-ceres" {= "dev"}
  "rocq-verified-extraction" {= "9.0.dev"}
  "cmdliner" {< "2.0.0"}
  "coq-compcert" {= "3.16"}
]

pin-depends: [
  ["coq-ceres.dev" "git+https://github.com/4ever2/rocq-ceres.git#01bee32638df4b6180b3e9ee70beed11150a5da0"]
  ["coq-compcert.3.16" "git+https://github.com/4ever2/CompCert.git#4d57cc53a535484578846e05d1896a5b6abed30b"]
  ["coq-certicoq.dev" "git+https://github.com/4ever2/certicoq.git#476ba6f262b8180600853c304e873fd9f7f20b8d"]
  ["rocq-verified-extraction.9.0.dev" "git+https://github.com/4ever2/rocq-verified-extraction.git#ab5009fddd7744225533f7b4d5b19cbff652f5a3"]
  ["rocq-typed-extraction-common.9.0.dev" "git+https://github.com/peregrine-project/rocq-typed-extraction.git#5b9de3c5eaf47177e46cc8177bf44cf6f89291a1"]
  ["rocq-rust-extraction.9.0.dev" "git+https://github.com/peregrine-project/rocq-typed-extraction.git#5b9de3c5eaf47177e46cc8177bf44cf6f89291a1"]
  ["rocq-elm-extraction.9.0.dev" "git+https://github.com/peregrine-project/rocq-typed-extraction.git#5b9de3c5eaf47177e46cc8177bf44cf6f89291a1"]
]

build: [ make "build" ]
install: [ "dune" "install" "-p" name ]

tags: [
  "keyword:extraction"
  "logpath:Peregrine"
]
