opam-version: "2.0"
name: "rocq-peregrine"
version: "dev"
synopsis: "The Peregrine tool is a unified middle-end for code generation from proof assistants"
description: """
The Peregrine tool is a unified middle-end for code generation from proof assistants
"""
maintainer: "The Peregrine team"
authors: "The Peregrine team"
license: "MIT"
homepage: "https://peregrine-project.github.io/"
dev-repo: "git+https://github.com/peregrine-project/peregrine-tool.git"
bug-reports: "https://github.com/peregrine-project/peregrine-tool/issues"

depends: [
  "rocq-core" {>= "9.1" & < "9.2~"}
  "rocq-stdlib" {>= "9.0" & < "9.2~"}
  "rocq-metarocq-erasure-plugin" {>= "1.5.1" & < "1.5.2"}
  "rocq-typed-extraction-common" {= "0.2.1"}
  "rocq-rust-extraction" {= "0.2.1"}
  "rocq-elm-extraction" {= "0.2.1"}
  "rocq-cakeml-extraction" {= "0.1.0"}
  "rocq-verified-extraction" {= "1.0.0+9.1"}
  "rocq-primitive" {= "9.0.0"}
  "rocq-ceres-bytestring" {= "1.0.0"}
  "rocq-certirocq" {= "0.9.1+9.1"}
  "cmdliner" {>= "2.0.0"}
]

build: [ make "build" ]
install: [ make "install" ]

tags: [
  "keyword:extraction"
  "logpath:Peregrine"
]
