(lang dune 3.17)

(name rocq-peregrine)

(generate_opam_files false)

(source
 (github anon/anon))

(authors "The Peregrine team")

(maintainers "The Peregrine team")

(license MIT)

(package
 (name rocq-peregrine)
 (synopsis "The Peregrine tool is a unified middle-end for code generation from proof assistants")
 (description "The Peregrine tool is a unified middle-end for code generation from proof assistants")
 (depends ocaml rocq-primitive)
 (tags
  ("keyword:extraction" "logpath:Peregrine")))
