opam-version: "2.0"
name: "rocq-cakeml-extraction"
version: "dev"
synopsis: "CakeML backend for Peregrine"
description: """
CakeML backend for Peregrine
"""
maintainer: "The Peregrine team"
authors: "The Peregrine team"
license: "MIT"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "rocq-stdlib" {>= "9.0" & < "9.1~"}
  "rocq-metarocq-utils" {= "1.4+9.0"}
  "rocq-metarocq-common" {= "1.4+9.0"}
  "rocq-metarocq-template" {= "1.4+9.0"}
  "rocq-metarocq-template-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-pcuic" {= "1.4+9.0"}
  "rocq-metarocq-safechecker" {= "1.4+9.0"}
  "rocq-metarocq-erasure" {= "1.4+9.0"}
  "rocq-metarocq-erasure-plugin" {= "1.4+9.0"}
  "coq-ceres" {= "dev"}
]

build: [ make "build" ]
install: [ make "install" ]

tags: [
  "keyword:extraction"
  "logpath:CakeML"
]
